Use make test in gitlab-ci
This switches to use the new make test command instead of directly
calling the pylinkvalidate script.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ test:
   - make html
   - make serve &
   - sleep 0.2
-  - pylinkvalidate.py -P 127.0.0.1:8000
+  - make test
   artifacts:
     paths:
     - output/
